fixes menu button being too big

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -55,7 +55,7 @@ html {
   border-radius: 20px;
 }
 .tright {
-  
+  width: 132px;
 }
 
 .sm-menu {
